--- a/src/components/ImageCalendar/calendar.css
+++ b/src/components/ImageCalendar/calendar.css
@@ -1,15 +1,12 @@
 .react-calendar {
-    width: 350px;
-    max-width: 100%;
-    background: white;
-    border: 1px solid #a0a096;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 1.125em;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+  width: auto;
+  max-width: 100%;
+  margin: auto;
+  background: white;
+  border: 1px solid white;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.125em;
+}
   .react-calendar--doubleView {
     width: 700px;
   }
@@ -119,5 +116,40 @@
   }
   .react-calendar--selectRange .react-calendar__tile--hover {
     background-color: #e6e6e6;
+  }
+
+  .date-image {
+    width: 40px;
+    height: 40px;
+    display: flex;
+  }
+
+  .date-image img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  .modal-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    position: relative;
+  }
+
+  .header-user {
+    width: 100%;
+    padding-left: 7px;
+    padding-bottom: 16px;
+    padding-top: 16px;
+    padding-right: 7px;
+    align-items: center;
+  }
+
+  .header-username {
+    font-family: 'PT Sans', sans-serif;
+    font-weight: bold;
+    font-size: 15px;
   }
   
