--- a/src/components/Post/post.css
+++ b/src/components/Post/post.css
@@ -1,71 +1,80 @@
 .Post {
-    border-radius: 3px;
-    border: 1px solid #e6e6e6;
-    background-color: #fff;
-    margin-bottom: 30px;
-    margin-left : 5%;
-    margin-right: 5%;
-    margin-top: 30px;
-  }
-  .Post-user {
-    display: flex;
-    /* justify-content: space-between; */
-    padding-left: 7px;
-    padding-bottom: 16px;
-    padding-top: 16px;
-    padding-right: 7px;
-    align-items: center;
-  }
-  .Post-user-avatar {
-    width: 60px;
-    height: 60px;
-    display: flex;
-  }
-  .Post-user-avatar img {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    object-fit: cover;
-  }
-  .Post-username {
-    margin-left: 8px;
-    font-family: 'PT Sans', sans-serif;
-    font-weight: bold;
-    font-size: 15px;
-  }
-  .Post-date {
-    color: rgb(179, 176, 176);
-    font-size: 15px;
-    margin-left: auto;
-  }
-  .Post-image-bg {
-    background-color: #efefef;
-  }
-  .Post-image img {
-    display: block;
-    width: 100%;
-  }
-  .Post-caption {
-    padding: 7px 7px;
-  }
-  .Post-caption strong {
-    font-family: 'PT Sans', sans-serif;
-    font-weight: bold;
-  }
-  .vjs-fade-out {
-    display: none;
-    visibility: hidden;
-    opacity: 0;
-  }
+  border-radius: 3px;
+  border: 1px solid #e6e6e6;
+  background-color: #fff;
+  margin-bottom: 30px;
+  margin-left : 5%;
+  margin-right: 5%;
+  margin-top: 30px;
+}
+.Post-user {
+  display: flex;
+  padding-left: 7px;
+  padding-bottom: 16px;
+  padding-top: 16px;
+  padding-right: 7px;
+  align-items: center;
+}
+.Post-user-avatar {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  margin-left: 3%;
+}
+.Post-user-avatar img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.Post-username {
+  margin-left: 8px;
+  font-family: 'PT Sans', sans-serif;
+  font-weight: bold;
+  font-size: 15px;
+}
 
-  @media only screen and (min-width: 768){
-    .Post-username{
-      font-size: 10px;
-    }
-    .Post-date{
-      font-size: 10px;
-    }
-    .Post-caption{
-      font-size: 10px;
-    }
+.Post-location {
+  color: rgb(134, 133, 133);
+  margin-left: 8px;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 12px;
+}
+
+.Post-date {
+  color: rgb(134, 133, 133);
+  font-size: 15px;
+  margin-left: auto;
+  margin-right: 3%;
+}
+.Post-image-bg {
+  background-color: #efefef;
+}
+.Post-image img {
+  display: block;
+  width: 100%;
+}
+.Post-caption {
+  padding: 7px 7px;
+}
+.Post-caption strong {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: bold;
+}
+.vjs-fade-out {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+}
+
+@media only screen and (min-width: 768){
+  .Post-username{
+    font-size: 10px;
   }
+  .Post-date{
+    font-size: 10px;
+  }
+  .Post-caption{
+    font-size: 10px;
+  }
+}
